add: API keras to ONNX conversion

--- a/notebooks/keras.ipynb
+++ b/notebooks/keras.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -143,14 +143,14 @@
    "source": [
     "from PIL import Image\n",
     "\n",
-    "img = Image.open('car.jpg').convert('L').resize((100,100))\n",
+    "img = Image.open('burger.jpeg').convert('L').resize((100,100))\n",
     "ximg = np.array(img)\n",
     "print(ximg.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -165,33 +165,35 @@
     "X_test = np.array([ximg]).reshape(100, 100, 1)\n",
     "\n",
     "X_test = X_test[np.newaxis]\n",
-    "X_test = X_test.astype(np.float32)\n",
+    "X_test = X_test.astype(np.float32) / 255\n",
     "\n",
     "print(X_test.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[array([[1., 0.]], dtype=float32)]\n"
+      "[0.2552848 0.7447152]\n"
      ]
     }
    ],
    "source": [
     "raw_result = sess.run([], {input_name: X_test})\n",
     "\n",
-    "print(raw_result)"
+    "res = raw_result[0][0]\n",
+    "\n",
+    "print(res)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +202,7 @@
        "'tensor(float)'"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
