fix: a lot of things

--- a/notebooks/keras.ipynb
+++ b/notebooks/keras.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,20 +15,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Update the input name and path for your Keras model\n",
-    "input_keras_model = 'car_keras.h5'\n",
+    "input_keras_model = 'resnet.hdf5'\n",
     "\n",
     "# Change this path to the output name and path for the ONNX model\n",
-    "output_onnx_model = 'car_keras.onnx'"
+    "output_onnx_model = 'resnet.onnx'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
